# sic-xe-assembler

./: .clang-format  .gitattributes  .gitignore  01257128-asm.tex  CMakeLists.txt  README.md
AI_prompt/: SIC-Opcode-查表資料結構比較.docx  SIC-XE-Format-2-指令暫存器限制.docx  SIC-XE-指令-C-語言解析器.docx  狀態機-枚舉與實作優化.docx
docs/: appendix.tex  ch1.tex  ch2.tex  ch3.tex  ch4-1.tex  ch4-2.tex  ch4-3.tex  ch4-4.tex  ch4.tex  ch567.tex  fsm.tex  main.tex  nfa.tex  opcode.aux  opcode.tex  preamble.tex  prompt.aux  prompt.tex
examples/: test.asm
include/: assemble.h  constants.h  context.h  instruction.h  opcode.h  parse.h  symbol.h  utils.h
src/: assemble.c  main.c  opcode.c  parse.c  utils.c
